--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "@heroicons/vue": "^2.2.0",
     "vue": "^3.5.17",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.9.2"
   },
   "devDependencies": {
