--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@heroicons/vue": "^2.2.0",
+    "@mdi/font": "^7.4.47",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1",
     "vuetify": "^3.9.2"
